docs: 补充 JVM 调优思路与 MAT 排查实战
新增面试回答结构模板、常见 GC 问题诊断、调优步骤、MAT 使用流程及面试话术

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>